--- a/_posts/2017-04-29-one-year.markdown
+++ b/_posts/2017-04-29-one-year.markdown
@@ -160,7 +160,7 @@ practical complaints as an international student in Europe:
   responded, even yet, to my requests, and I haven't been able to secure
   my apartment, which is required to get a visa;
 * Expedited passport renewals in the US are expensive -- I've paid over
-  $400 for this -- and required for me to maintain my student status.
+  $400 for this -- and required for me to maintain my student status;
 * Belgian income, even if tax-free, is taxed in the United States, if
   you are a citizen: the double taxation agreement only works on taxes
   paid -- if you're tax free, you don't pay taxes and therefore don't
