--- a/_posts/2017-04-29-one-year.markdown
+++ b/_posts/2017-04-29-one-year.markdown
@@ -24,7 +24,7 @@ I was both excited, and naive.
 
 Given that I thought I was leaving San Francisco in a few short months, I arranged to stay in an Airbnb in the Tenderloin when I arrived, and then later find a longer-term apartment that would be somewhat cheaper if I needed to stay longer.  This ended up turning into a situation where I was switching Airbnb's every week, because I couldn't find something that was both available and cheap enough to stay in for an extended period of time.
 
-Once I arrived, I began working on obtaining a visa for Belgium.  It's actually unclear if this visa was actually needed: it's required for entry if your country doesn't participate in the visa waiver program, but when I went to obtain my resident card, I was not required to show it to any one in my commune, nor did I need to have the visa renewed when it expired this March.  Alas, I followed the university's instructions.
+Once I arrived, I began working on obtaining a visa for Belgium.  **It's actually unclear if this visa was actually needed.** as it's required for entry only if your country doesn't participate in the visa waiver program, but when I went to obtain my resident card, I was not required to show it to any one in my commune, nor did I need to have the visa renewed when it expired this March.  Alas, I followed the university's instructions.
 
 ## Getting the visa
 
