--- a/_posts/2017-04-29-one-year.markdown
+++ b/_posts/2017-04-29-one-year.markdown
@@ -41,7 +41,7 @@ I received the notarized report a few days later and schedule a single day fligh
 
 The Belgian consulate was extremely nice -- there was no one there when I arrived early and said I would wait, so they saw me immediately, didn't care that I had not provided enough copies of one of the forms and had incorrectly filled out a section of another and I was out of there within 25 minutes.  They said I would receive the visa back the following day, and that they would send it overnight postage, which I provided to them when I arrived.
 
-In the mean time, I've been moving from apartment to apartment, saying week by week in private rooms in different neighborhoods: the Tenderloin -$1,800/mo-, Mission -$2,400/mo-, etc.  I eventually ended up leaving my suitcase at work instead of moving it from location to location and bringing clothes home in a smaller bag.  Eventually, I landed a place to stay where I no longer needed to move.  
+In the mean time, I've been moving from apartment to apartment, saying week by week in private rooms in different neighborhoods: the Tenderloin, Mission, etc.  I eventually ended up leaving my suitcase at work instead of moving it from location to location and bringing clothes home in a smaller bag.  Eventually, I landed a place to stay where I no longer needed to move.
 
 I tried looking for something more longer-term or a sublet, but I either received no response, they didn't want someone with such a short-time frame, or someone who was traveling quite a bit for conferences and to obtain the visa.  One of the places I stayed with Airbnb, the renter was extremely irritated [for some reason, in that I just wasn't there or coming and going too often] that I was traveling a bunch: I was gone for a trip to Sweden for a conference, and then a conference in Las Vegas, both to present work-in-progress or peer-reviewed published work.
 
@@ -50,6 +50,8 @@ I tried looking for something more longer-term or a sublet, but I either receive
 The day after I receive my visa, I receive an email from my advisor stating that if I'm not in Belgium to sign the forms by March 28th, I forfeit my fellowship.  I'm about to book a trip to Belgium, waiting for a response from my advisor that states I can only be reimbursed for the travel to Belgium and not prepaid even though I'm provided with a "moving" allowance, when the Brussels airport is attacked by terrorists.
 
 I have three days to book a ticket to Charles de Gaulle, travel to Belgium by train, and make it there with one day to spare.  I arrive and find out I don't have to physically sign anything after all, and check into my university flat.
+
+[Last minute one-way flight to Charles de Gaulle: $1,800]
 
 Meanwhile, I had quit my short-term job and was told that given I didn't stay a year, I would forfeit all of my stock options and have to repay my relocation benefits, even though they knew before I started I wouldn't be there for more than a year because I was going to grad school.  We ended up coming to an agreement around this, but this is what I get for not being more diligent with reading employment contracts.
 
