--- a/_posts/2017-11-15-visas.markdown
+++ b/_posts/2017-11-15-visas.markdown
@@ -26,7 +26,7 @@ Further complicating matters, I found out that I also needed to re-enroll in Bel
 
 As an American residing in Belgium, banks don't like giving you accounts because it's extra work for them: they are required by the US government to report all of your financials per US law so you are properly taxed.  When I first arrived in Belgium, my account with BNP Paribas Fortis was deactivated twice: both times where my tax form that was required to be sent to the US was "lost" and they locked out my money, leaving me in Belgium with no money for weeks at a time.  When your residence expires, you are also shut off, so maintaining a residence is key.  
 
-In terms of the double taxation agreement with Belgium and the United States: the US will not tax you on every dollar paid to a foreign government on income.  Now, here's the problem: my Ph.D. is tax free, therefore, I pay no taxes in Belgium, which means, I technically paid $0 USD to Belgium in taxes, which means, that on my Ph.D. stipend, I paid the full taxation that the US allowed.  Because I started my Ph.D. in March, and contracted in SF the months leading up to it, I was pushed into a much higher tax bracket and subsequently had to pay taxes on part of my tax free Ph.D. stipend to the US gonvernment.
+In terms of the double taxation agreement with Belgium and the United States: the US will not tax you on every dollar paid to a foreign government on income.  Now, here's the problem: my Ph.D. is tax free, therefore, I pay no taxes in Belgium, which means, I technically paid $0 USD to Belgium in taxes, which means, that on my Ph.D. stipend, I paid the full taxation that the US allowed.  Because I started my Ph.D. in March, and contracted in SF the months leading up to it, I was pushed into a much higher tax bracket and subsequently had to pay taxes on part of my tax free Ph.D. stipend to the US governnment.
 
 # The Visa, Part 2
 
