--- a/_posts/2017-11-15-visas.markdown
+++ b/_posts/2017-11-15-visas.markdown
@@ -62,4 +62,8 @@ My residence is set to expire October 31st, and it's October 27th and I haven't 
 
 It's been three months on the road, living in Belgium (and various other places where I've had to speak at conferences or collaborate with peers) since I've been home to Lisbon.  I have an apartment that I've never seen or lived in, that I hope to return to soon, and then I begin the process of the medical examinations, vaccinations, and paperwork needed to get enrolled at the university and become a resident of Portugal.  I've spent well over 4,000 EUR these past few months, living out of a single suitcase in various AirBnB's and hotels.  
 
-Unfortunately, the university has provided little support, and most of the process has been left to me.  Not just me, but co-workers from China and other non-Schengen countries have gone through the same.  I hope that in the future, student will be assisted in the Erasmus programme, which seems to assume at this point that most students are coming from countries with Schengen visas.  Three years of funding for a Ph.D. is not enough, when you lose months to process.
+Unfortunately, the university has provided little support, and most of the process has been left to me.  Not just me, but co-workers from China and other non-Schengen countries have gone through the same.  I hope that in the future, student will be assisted in the Erasmus programme, which seems to assume at this point that most students are coming from countries with Schengen visas.  
+
+# Conclusion
+
+I'm thankful to be doing my Ph.D in Europe, regardless of the process involved and the complications I've experienced.  It's been an amazing experience, and I wouldn't trade it for anything.  I've had the chance to visit countless universities, I've collaborated with a number of fantastic researchers, and the European lifestyle is quite amazing.  However, three years isn't enough to account for the amount of process involved in moving between countries as a non-European, and I hope that is adjusted in the future for future Ph.D. students.
