--- a/_posts/2018-07-14-celiac.markdown
+++ b/_posts/2018-07-14-celiac.markdown
@@ -7,7 +7,7 @@ categories: personal
 
 Anatomy of a Glutening
 
-With a reference to my favorite Otto Preminger movie, and being recently glutened, I decided to write up the symptomes I experience when I accidentially have gluten.  At this point, it's clockwork.  I know it when it happens and I can see it coming from miles away.  Once I see it, it's unable to be prevented, and the only solution is to just something I have to deal with.
+With a reference to my favorite Otto Preminger movie, and being recently glutened, I decided to write up the symptoms I experience when I accidentially have gluten.  At this point, it's clockwork.  I know it when it happens and I can see it coming from miles away.  Once I see it, it's unable to be prevented, and the only solution is to just something I have to deal with.
 
 # Day 1
 
@@ -39,14 +39,14 @@ With a reference to my favorite Otto Preminger movie, and being recently glutene
 
 # Day 5
 
-* I'm returning to normal.  I'm able to use the restroom.  The physical symptomes start to subside.
+* I'm returning to normal.  I'm able to use the restroom.  The physical symptoms start to subside.
 
 # Day 7
 
-* The mental symptomes disappear.  This is curious, because it happens all of a sudden.  Lying in bed, the mental symptomes dissappear almost immeditaly.  I'm feeling really awful and then all of a sudden the fog lifts and it's as if all of my control returns almost immediately that I don't even realize what happened.  
+* The mental symptoms disappear.  This is curious, because it happens all of a sudden.  Lying in bed, the mental symptoms dissappear almost immeditaly.  I'm feeling really awful and then all of a sudden the fog lifts and it's as if all of my control returns almost immediately that I don't even realize what happened.  
 
 * I barely remember what happened during the period where I was affected.  I remember major events that happend, but if I try to recall specifics about what I did during the period I was feeling really awful, I can't.
 
 # Conclusion
 
-Now that I've seen the effects of glutening for over a year, I'm able to know precily when it's coming and adapt accordingly.  At this point, the symptomes happen on a very predictable schedule, and I've learned to identify them and know what's happening.  Knowing what's happening is the first step towards not letting it get you down, and having a timeline is useful in knowing precisely what will happen when, what to expect, and how to deal with feeling better in a more controlled way.  Unfortunately, once it happens, there's not much you can do and so you have to just ride it out until you will feel better.
+Now that I've seen the effects of glutening for over a year, I'm able to know precily when it's coming and adapt accordingly.  At this point, the symptoms happen on a very predictable schedule, and I've learned to identify them and know what's happening.  Knowing what's happening is the first step towards not letting it get you down, and having a timeline is useful in knowing precisely what will happen when, what to expect, and how to deal with feeling better in a more controlled way.  Unfortunately, once it happens, there's not much you can do and so you have to just ride it out until you will feel better.
