--- a/_posts/2018-07-14-celiac.markdown
+++ b/_posts/2018-07-14-celiac.markdown
@@ -25,7 +25,7 @@ With a reference to my favorite Otto Preminger movie, and being recently glutene
 
 # Day 3
 
-* Since my intestines are basically no longer absorbing nutrients from the food, my appetite returns.  I can easily drink 5 liters of water in a hour and my appetite is unsatiable.  Previously, I've eaten 2lbs of bacon in a single meal; I've gone to the supermarket and bought two bags of food and eaten it all in around 3 hours.  I'm still hungry after it and it only complicated the matter that I'm unable to go to the bathroom.  I end up feeling worse.
+* Since my intestines are basically no longer absorbing nutrients from the food, my appetite returns.  I can easily drink 5 liters of water in a hour and my appetite is insatiable.  Previously, I've eaten 2lbs of bacon in a single meal; I've gone to the supermarket and bought two bags of food and eaten it all in around 3 hours.  I'm still hungry after it and it only complicated the matter that I'm unable to go to the bathroom.  I end up feeling worse.
 
 * The inability to relieve myself only further perpetuates my anxiety.  I get restless legs, causing the inability to sleep at all.  My body aches uncontroablly and I have to keep shaking to maintain any semblance of sanity.  
 
