--- a/_posts/2018-07-14-celiac.markdown
+++ b/_posts/2018-07-14-celiac.markdown
@@ -7,7 +7,7 @@ categories: personal
 
 With a reference to my favorite Otto Preminger movie, and being recently glutened, I decided to write up the symptoms I experience when I accidentially have gluten.  At this point, it's clockwork.  I know it when it happens and I can see it coming from miles away.  Once I see it, it's unable to be prevented, and the only solution is to just something I have to deal with.
 
-# Day 1
+# Day 1 (24ish hours after exposure)
 
 * First, I feel my tongue irritated.  It feels like it's been rubbing against your teeth, as if your teeth are broken, and it's all raw for no reason.  That's the initial sign that something's wrong.  I can tell immediately, because it comes on suddenly and gives me pause whenever I'm either eating or drinking.  I know something bad is soon to follow.
 
